2001-11-16  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_netinfo.c (bk_netinfo_update_hostent): pass bni *not*
	bni->bni_addrs (sigh).
	(bk_netinfo_destroy): Don't forget to destroy clc's

2001-11-15  James Tanis  <jtt@winwood.sysdetect.com>

	* libbk: Too many changes to document here. Basic support for
	asynchronous connect (working).

2001-11-13  James Tanis  <jtt@winwood.sysdetect.com>

	* include/libbk.h (struct bk_netinfo): Redo comments for doxygen.

	* test_getbyfoo.c: test case for doing queries with NULL copyout
	variables.

	* b_netaddr.c: Properly updae a bk_netaddr on the basis of a net
	address. 

	* b_getbyfoo.c: Fixes for allowing copyout structure to be NULL.

2001-11-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (CALLBACK) (bk_ioh_close): Don't close if we are in
	the middle of a user callback, as this will leave the callee
	hanging.  Defer the close instead.  Eliminate notifyclose--we will
	*always* notify.

	* lib/b_relay.c (bk_relay_iohhandler): He is throttled on read,
	not me, when I write out some data.

	* lib/b_ioh.c (ioh_queue): Queue full return code being dropped by
	all and sundry.

2001-11-15  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_fun.c (bk_fun_exit): More info about implicit exits

	* lib/b_ioh.c (ioh_dequeue_byte): Abstract shared functionality
	into function.

2001-11-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_signal.c (bk_signal): conditionalize SA_SIGINFO, and
	document the problems with the current API if SA_SIGINFO exists
	and is used.

2001-11-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (ioht_block_other): Line misordering causing
	blocking to return invalid status codes, invalid command switch
	variable (switching on flags instead).
	(ioh_getlastbuf): Must offset for both inuse (read) and used
	(write)
	
	* lib/b_error.c (bk_error_iprint): File handles is another legal
	output source.

2001-11-14  Seth Robertson  <seth@yeah.baka.org>
