@@ -1,3 +1,9 @@
+2001-11-16  Seth Robertson  <seth@startide.sysdetect.com>
+
+	* lib/b_ioh.c (ioht_line_other): Minor break nit
+	(ioht_vector_other): Subroutine needs to be in place where it can
+	be executed by everyone who needs it.
+
 2001-11-16  James Tanis  <jtt@winwood.sysdetect.com>
 
 	* lib/b_netinfo.c (bk_netinfo_update_hostent): pass bni *not*
